--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "yaqeen-patient",
+  "name": "yaqeen4patient",
+  "homepage": "https://thuleen.github.io/yaqeen-patient/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "vite-plugin-pwa": "^0.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^2.0.0",
+    "prettier": "^2.7.1",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
