--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "vite-plugin-pwa": "^0.12.3"
